--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "webpack"
   ],
   "license": "ISC",
-  "author": "Kata Academy",
+  "author": "Arkadiy Burov",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
